Fix an alignment error in share-buttons-container

--- a/src/scss/_share-buttons.scss
+++ b/src/scss/_share-buttons.scss
@@ -1,5 +1,4 @@
 .share-button {
-    display: inline-block;
     width: 0;
     height: 24px;
     line-height: 1;
