--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -330,9 +330,9 @@ nav.navbar-default {
     }
 }
 .share-buttons-container {
-    text-align: center;
     padding: 5px 0 0;
-    font-size: 0;
+    display: flex;
+    justify-content: center;
 }
 #sub-content-container {
     padding-left: 20px;
